software/branches/1.3RC/interfaces/iMesh/spec/iMesh_new.h


typedef struct iMesh_Instance_Private* iMesh_Instance;
enum iMesh_EntityTopology {
    iMesh_EntityTopology_MIN = 0,
    iMesh_POINT = iMesh_EntityTopology_MIN,
    iMesh_LINE_SEGMENT,
    iMesh_POLYGON,
    iMesh_TRIANGLE,
    iMesh_QUADRILATERAL,
    iMesh_POLYHEDRON,
    iMesh_TETRAHEDRON,
    iMesh_HEXAHEDRON,
    iMesh_PRISM,
    iMesh_PYRAMID,
    iMesh_SEPTAHEDRON,
    iMesh_ALL_TOPOLOGIES,
    iMesh_EntityTopology_MAX = iMesh_ALL_TOPOLOGIES
};
void iMesh_getErrorType(
    iMesh_Instance instance, 
    int* error_type  
);
void iMesh_getDescription(
    iMesh_Instance instance, 
    char* descr, 
    int descr_len  
);
void iMesh_newMesh(
    const char* options, 
    iMesh_Instance* instance, 
    int* err, 
    int options_len  
);
void iMesh_dtor(
    iMesh_Instance instance, 
    int* err  
);
void iMesh_load(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle entity_set_handle, 
    const char* name, 
    const char* options, 
    int* err, 
    int name_len, 
    int options_len  
);
void iMesh_save(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle entity_set_handle, 
    const char* name, 
    const char* options, 
    int* err, 
    const int name_len, 
    int options_len  
);
void iMesh_getRootSet(
    iMesh_Instance instance, 
    iBase_EntitySetHandle* root_set, 
    int* err  
);
void iMesh_getGeometricDimension(
    iMesh_Instance instance, 
    int* geom_dim, 
    int* err  
);
void iMesh_setGeometricDimension(
     iMesh_Instance instance, 
    int geom_dim, 
    int* err   
);
void iMesh_getDfltStorage(
    iMesh_Instance instance, 
    int* order, 
    int* err  
);
void iMesh_getAdjTable (
    iMesh_Instance instance, 
    int** adjacency_table, 
    int* adjacency_table_allocated, 
    int* adjacency_table_size, 
    int* err  
);
void iMesh_getNumOfType(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle entity_set_handle, 
    const int entity_type, 
    int* num_type, 
    int* err  
);
void iMesh_getNumOfTopo(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle entity_set_handle, 
    const int entity_topology, 
    int* num_topo, 
    int* err  
);
void iMesh_areEHValid(
    iMesh_Instance instance, 
    int doReset, 
    int* areHandlesInvariant, 
    int* err  
);
void iMesh_getEntities(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle entity_set_handle, 
    const int entity_type, 
    const int entity_topology, 
    iBase_EntityHandle** entity_handles, 
    int* entity_handles_allocated, 
    int* entity_handles_size, 
    int* err  
);
void iMesh_getVtxArrCoords(
    iMesh_Instance instance, 
    const iBase_EntityHandle* vertex_handles, 
    const int vertex_handles_size, 
    const int storage_order, 
    double** coords, 
    int* coords_allocated, 
    int* coords_size, 
    int* err  
);
void iMesh_initEntArrIter(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle entity_set_handle, 
    const int requested_entity_type, 
    const int requested_entity_topology, 
    const int requested_array_size, 
    iBase_EntityArrIterator* entArr_iterator, 
    int* err  
);
void iMesh_getNextEntArrIter(
    iMesh_Instance instance, 
    iBase_EntityArrIterator entArr_iterator, 
    iBase_EntityHandle** entity_handles, 
    int* entity_handles_allocated, 
    int* entity_handles_size, 
    int* has_data, 
    int* err  
);