software/branches/1.3RC/interfaces/iMesh/examples/FindAdjacency/iMesh_iso.F03

! Interfaces for wrapper routines (derived from the header file(s) iMesh.h)
!

!
! This file is included so that name mangling will be handled
! consistently between C and Fortran 2003, and will match the local F77
! compiler.  Note that the syntax here explicitly assumes the use of
! the C preprocessor on this file (or whatever includes it).
!
!#include "iMesh_protos.h"

module iBase
  use iso_c_binding

  enum, bind(C)
  enumerator :: iBase_VERTEX = 0, iBase_EDGE, iBase_FACE, iBase_REGION, &
       iBase_ALL_TYPES
  end enum

  enum, bind(C)
    enumerator :: iBase_UNAVAILABLE = 0  ! Adjacency information not supported 
    enumerator iBase_ALL_ORDER_1         ! No more than local mesh traversal
    enumerator iBase_ALL_ORDER_LOGN      ! Global tree search 
    enumerator iBase_ALL_ORDER_N         ! Global exhaustive search 
    enumerator iBase_SOME_ORDER_1        ! Only some adjacency info, local
    enumerator iBase_SOME_ORDER_LOGN     ! Only some adjacency info, tree 
    enumerator iBase_SOME_ORDER_N        ! Only some adjacency info, exhaustive 
  end enum

  enum, bind(C)
  enumerator :: iBase_NEW = 0, iBase_ALREADY_EXISTED, iBase_CREATED_DUPLICATE, &
       iBase_CREATION_FAILED
  end enum

  enum, bind(C)
  enumerator :: iBase_SILENT, iBase_WARN_ONLY, iBase_THROW_ERROR
  end enum

  enum, bind(C)
  enumerator iBase_SUCCESS, iBase_MESH_ALREADY_LOADED, iBase_NO_MESH_DATA, &
       iBase_FILE_NOT_FOUND, iBase_FILE_WRITE_ERROR, iBase_NIL_ARRAY, &
       iBase_BAD_ARRAY_SIZE, iBase_BAD_ARRAY_DIMENSION, &
       iBase_INVALID_ENTITY_HANDLE, iBase_INVALID_ENTITY_COUNT, &
       iBase_INVALID_ENTITY_TYPE, iBase_INVALID_ENTITY_TOPOLOGY, &
       iBase_BAD_TYPE_AND_TOPO, iBase_ENTITY_CREATION_ERROR, &
       iBase_INVALID_TAG_HANDLE, iBase_TAG_NOT_FOUND, iBase_TAG_ALREADY_EXISTS, &
       iBase_TAG_IN_USE, iBase_INVALID_ENTITYSET_HANDLE, &
       iBase_INVALID_ITERATOR_HANDLE, iBase_INVALID_ARGUMENT, &
       iBase_MEMORY_ALLOCATION_FAILED, iBase_NOT_SUPPORTED, iBase_FAILURE
  end enum

  enum, bind(C)
  enumerator iBase_BLOCKED, iBase_INTERLEAVED
  end enum

  enum, bind(C)
  enumerator iBase_INTEGER, iBase_DOUBLE, iBase_ENTITY_HANDLE, iBase_BYTES
  end enum

end module iBase

module iMesh
  use iso_c_binding
  implicit none

  enum, bind(C)
    enumerator :: iMesh_POINT = 0   ! a general zero-dimensional entity  
    enumerator iMesh_LINE_SEGMENT   ! a general one-dimensional entity  
    enumerator iMesh_POLYGON        ! a general two-dimensional element  
    enumerator iMesh_TRIANGLE       ! a three-sided, two-dimensional element  
    enumerator iMesh_QUADRILATERAL  ! a four-sided, two-dimensional element  
    enumerator iMesh_POLYHEDRON     ! a general three-dimensional element 
    enumerator iMesh_TETRAHEDRON    ! a four-sided, three-dimensional
    !  element whose faces are triangles 
    enumerator iMesh_HEXAHEDRON     ! a six-sided, three-dimensional
    !  element whose faces are quadrilaterals 
    enumerator iMesh_PRISM          ! a five-sided, three-dimensional
    !  element which has three quadrilateral faces and two triangular faces  
    enumerator iMesh_PYRAMID        ! a five-sided, three-dimensional
    !  element which has one quadrilateral face and four triangular faces 
    enumerator iMesh_SEPTAHEDRON    ! a hexahedral entity with one
    !  collapsed edge 
    enumerator iMesh_ALL_TOPOLOGIES ! allows the user to request
    !  information about all the topology types  
  end enum
  
  interface

     subroutine iMesh_getErrorType (instance, error_type, err) 
       !,bind(C,name="iMesh_getGetErrorType") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       integer(c_int), intent(out) :: error_type
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getErrorType
     
     subroutine iMesh_getDescription ( instance, descr, err, descr_len ) 
       !,bind(C,name="iMesh_getDescription") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       character(len=descr_len), intent(inout) :: descr
       integer(c_int), intent(inout) :: err
       integer(c_int), intent(in), value :: descr_len
     end subroutine iMesh_getDescription
     
     subroutine iMesh_newMesh ( options, instance, err, options_len ) 
       !,bind(C,name="iMesh_newMesh") 
       use iso_c_binding
       character(len=options_len), intent(in) :: options
       type(c_ptr), intent(out) :: instance
       integer(c_int), intent(out) :: err
       integer(c_int), intent(in), value :: options_len
     end subroutine iMesh_newMesh
     
     subroutine iMesh_dtor ( instance, err ) 
       ! ,bind(C,name="iMesh_dtor") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       integer(c_int), intent(out) :: err
     end subroutine iMesh_dtor

     subroutine iMesh_load ( instance, entity_set_handle, name, options, err, name_len, options_len ) 
       ! ,bind(C,name="iMesh_load") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set_handle
       character(len=name_len), intent(in) :: name
       character(len=options_len), intent(in) :: options
       integer(c_int), intent(out) :: err
       integer(c_int), intent(in), value :: name_len
       integer(c_int), intent(in), value :: options_len
     end subroutine iMesh_load

     subroutine iMesh_save ( instance, entity_set_handle, name, options, err, name_len, options_len ) 
       ! ,bind(C,name="iMesh_save") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set_handle
       character(len=name_len), intent(in) :: name
       character(len=options_len), intent(in) :: options
       integer(c_int), intent(out) :: err
       integer(c_int), intent(in), value :: name_len
       integer(c_int), intent(in), value :: options_len
     end subroutine iMesh_save

     subroutine iMesh_getRootSet ( instance, root_set, err ) 
       ! ,bind(C,name="iMesh_getRootSet") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(out) :: root_set
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getRootSet

     subroutine iMesh_getGeometricDimension ( instance, geom_dim, err ) 
       ! ,bind(C,name="iMesh_getGeometricDimension") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       integer(c_int), intent(out) :: geom_dim
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getGeometricDimension

     subroutine iMesh_setGeometricDimension ( instance, geom_dim, err ) 
       ! ,bind(C,name="iMesh_setGeometricDimension") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       integer(c_int), intent(in), value :: geom_dim
       integer(c_int), intent(out) :: err
     end subroutine iMesh_setGeometricDimension

     subroutine iMesh_getDfltStorage ( instance, order, err ) 
       ! ,bind(C,name="iMesh_getDfltStorage") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       integer(c_int), intent(out) :: order
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getDfltStorage

     subroutine iMesh_getAdjTable ( instance, adjacency_table, adjacency_table_allocated, adjacency_table_size, &
          err ) 
       ! ,bind(C,name="iMesh_getAdjTable") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(inout) :: adjacency_table
       integer(c_int), intent(inout) :: adjacency_table_allocated
       integer(c_int), intent(out) :: adjacency_table_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getAdjTable

     subroutine iMesh_getNumOfType ( instance, entity_set_handle, entity_type, num_type, err ) 
       ! ,bind(C,name="iMesh_getNumOfType") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set_handle
       integer(c_int), intent(in), value :: entity_type
       integer(c_int), intent(out) :: num_type
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getNumOfType

     subroutine iMesh_getNumOfTopo ( instance, entity_set_handle, entity_topology, num_topo, &
          err ) 
       ! ,bind(C,name="iMesh_getNumOfTopo") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set_handle
       integer(c_int), intent(in), value :: entity_topology
       integer(c_int), intent(out) :: num_topo
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getNumOfTopo

     subroutine iMesh_areEHValid ( instance, doReset, areHandlesInvariant, err ) 
       ! ,bind(C,name="iMesh_areEHValid") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       integer(c_int), intent(in), value :: doReset
       integer(c_int), intent(out) :: areHandlesInvariant
       integer(c_int), intent(out) :: err
     end subroutine iMesh_areEHValid

     subroutine iMesh_getEntities ( instance, entity_set_handle, entity_type, entity_topology, &
          entity_handles, entity_handles_allocated, entity_handles_size, err ) 
       ! ,bind(C,name="iMesh_getEntities") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set_handle
       integer(c_int), intent(in), value :: entity_type
       integer(c_int), intent(in), value :: entity_topology
       type(c_ptr), intent(inout) :: entity_handles
       integer(c_int), intent(inout) :: entity_handles_allocated
       integer(c_int), intent(out) :: entity_handles_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getEntities

     subroutine iMesh_getVtxArrCoords ( instance, vertex_handles, vertex_handles_size, storage_order, &
          coords, coords_allocated, coords_size, err ) 
       ! ,bind(C,name="iMesh_getVtxArrCoords") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: vertex_handles
       integer(c_int), intent(in), value :: vertex_handles_size
       integer(c_int), intent(in), value :: storage_order
       type(c_ptr), intent(inout) :: coords
       integer(c_int), intent(inout) :: coords_allocated
       integer(c_int), intent(out) :: coords_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getVtxArrCoords

     subroutine iMesh_initEntArrIter ( instance, entity_set_handle, requested_entity_type, requested_entity_topology, &
          requested_array_size, entArr_iterator, err ) 
       ! ,bind(C,name="iMesh_initEntArrIter") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set_handle
       integer(c_int), intent(in), value :: requested_entity_type
       integer(c_int), intent(in), value :: requested_entity_topology
       integer(c_int), intent(in), value :: requested_array_size
       type(c_ptr), intent(out) :: entArr_iterator
       integer(c_int), intent(out) :: err
     end subroutine iMesh_initEntArrIter

     subroutine iMesh_getNextEntArrIter ( instance, entArr_iterator, entity_handles, entity_handles_allocated, &
          entity_handles_size, has_data, err ) 
       ! ,bind(C,name="iMesh_getNextEntArrIter") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entArr_iterator
       type(c_ptr), intent(inout) :: entity_handles
       integer(c_int), intent(inout) :: entity_handles_allocated
       integer(c_int), intent(out) :: entity_handles_size
       integer(c_int), intent(out) :: has_data
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getNextEntArrIter
